<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_auto"
            android:icon="@drawable/wheel"
            android:title="@string/menu_auto" />
        <item
            android:id="@+id/nav_bache"
            android:icon="@drawable/marcador"
            android:title="@string/menu_bache" />
        <item
            android:id="@+id/nav_configuracion"
            android:icon="@drawable/configuracion"
            android:title="@string/menu_confi" />
    </group>

    <item android:title="@string/menu_usuario">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/logout"
                android:title="@string/menu_logout" />
        </menu>
    </item>

</menu>
