<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".InicioActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/layout_backg"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/layout_form"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/user" />

            <EditText
                android:id="@+id/reg_firstName"
                android:singleLine="true"
                android:backgroundTint="@color/white"
                android:textColorHighlight="@color/gray"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif-condensed"
                android:hint="@string/first_name" />

        </LinearLayout> // First Name

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/layout_form"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/user" />

            <EditText
                android:id="@+id/reg_lastName"
                android:singleLine="true"
                android:backgroundTint="@color/white"
                android:textColorHighlight="@color/gray"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif-condensed"
                android:hint="@string/last_name" />

        </LinearLayout> // Last Name

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/layout_form"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/phone" />

            <EditText
                android:id="@+id/reg_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/white"
                android:fontFamily="sans-serif-condensed"
                android:hint="@string/phone"
                android:inputType="phone"
                android:singleLine="true"
                android:textColorHighlight="@color/gray" />

        </LinearLayout> // Phone

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/layout_form"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/email" />

            <EditText
                android:id="@+id/reg_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/white"
                android:fontFamily="sans-serif-condensed"
                android:hint="@string/email"
                android:inputType="textWebEmailAddress"
                android:singleLine="true"
                android:textColorHighlight="@color/gray" />

        </LinearLayout> // Email

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/layout_form"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/city" />

            <Spinner
                android:entries="@array/cities"
                android:id="@+id/reg_city"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </Spinner>

            <!--
            <EditText
                android:id="@+id/reg_city"
                android:singleLine="true"
                android:backgroundTint="@color/white"
                android:textColorHighlight="@color/gray"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif-condensed"
                android:hint="@string/city" /> -->

        </LinearLayout> // City

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/layout_form"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/pass" />

            <EditText
                android:id="@+id/reg_password"
                android:singleLine="true"
                android:backgroundTint="@color/white"
                android:textColorHighlight="@color/gray"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif-condensed"
                android:hint="@string/password"
                android:inputType="textPassword" />

        </LinearLayout> // Password

        <TextView
            android:id="@+id/reg_createBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="70dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/create"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@color/white"></LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/reg_forgotBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="13dp"
                android:layout_marginEnd="20dp"
                android:text="@string/forgot"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="60dp"
                android:background="@color/white"></LinearLayout>

            <TextView
                android:id="@+id/reg_loginBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:layout_marginEnd="25dp"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>